--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
+
 {
   "name": "ClansBot",
-  "description": "My ClansBot",
-  "version": "0.2.1",
+  "description": "CB",
+  "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start":"node bot.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "11.2.1",
+    "discord.js": "11.1.0",
     "request": "2.81.0"
   }
 }
